--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "cocktail-frontend",
+  "name": "Cocktail-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -11,9 +10,12 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -44,13 +46,15 @@
     "@babel/core": "^7.12.17",
     "@babel/eslint-parser": "^7.12.17",
     "@babel/preset-env": "^7.12.17",
-    "babel-loader": "^8.2.2",
     "eslint": "^7.20.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "webpack": "^5.23.0"
-  }
+    "eslint-plugin-react-hooks": "^4.2.0"
+  },
+  "main": "index.jsx",
+  "repository": "git@github.com:debugferro/cocktail-frontend.git",
+  "author": "Gabriel Fontes <gabrielferroroque@hotmail.com>",
+  "license": "MIT"
 }
