--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,5 +18,13 @@
         "react"
     ],
     "rules": {
+      "no-param-reassign": ['error',
+        {
+      "props": true,
+      "ignorePropertyModificationsFor": [
+        'state',
+          ]
+        }
+      ]
     }
 }
