--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "4.0.2",
     "react-toastify": "^7.0.3",
     "redux": "^4.0.5",
+    "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
@@ -56,6 +57,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "url-loader": "^4.1.1",
     "webpack": "4.44.2"
   },
   "main": "index.jsx",
